--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Redirecting to github.com/putnamca/</title>
     <meta http-equiv="refresh" content="0; URL=https://github.com/putnamca">
     <link href="https://github.com/putnamca" rel="me">
+    <link href="https://twit.social/@putnamca" rel="me">
   </head>
   <body style="margin: 0; padding: 0">
     <a
